adding upper and lower bound measurements to notebook

--- a/carbonFootprintResults.ipynb
+++ b/carbonFootprintResults.ipynb
@@ -10,12 +10,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "id": "edc67d1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".output {\n",
+       "    flex-direction: row;\n",
+       "}\n",
+       "</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from IPython.display import display, HTML\n",
+    "css = \"\"\"\n",
+    ".output {\n",
+    "    flex-direction: row;\n",
+    "}\n",
+    "\"\"\"\n",
+    "HTML('<style>{}</style>'.format(css))"
    ]
   },
   {
@@ -33,21 +58,29 @@
    "id": "34fdae14",
    "metadata": {},
    "source": [
-    "# Kaggle Competition: Team 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bdfc2b03",
-   "metadata": {},
-   "source": [
+    "# Kaggle Competition: Team 2\n",
     "## Pipeline1: Pretraining"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "id": "24e41da9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is for 1 fold, out of 5\n",
+    "# This will be used to find OUR carbon footprint\n",
+    "pretrain_1_file = PATH+\"siim_pretrain_results_1epoch.csv\"\n",
+    "ptrain_1 = pd.read_csv(pretrain_1_file)\n",
+    "\n",
+    "#ptrain_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "22bde282",
    "metadata": {},
    "outputs": [
     {
@@ -150,26 +183,9 @@
        "6  n_cf2_pretraining  10:59:26     2.629704   71.061763      0.661040"
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# This is for 1 fold, out of 5\n",
-    "# This will be used to find OUR carbon footprint\n",
-    "pretrain_1_file = PATH+\"siim_pretrain_results_1epoch.csv\"\n",
-    "ptrain_1 = pd.read_csv(pretrain_1_file)\n",
-    "\n",
-    "ptrain_1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "22bde282",
-   "metadata": {},
-   "outputs": [
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -270,9 +286,8 @@
        "6  n_cf2_pretraining   54:57:12    13.148518   431.759478      4.016367"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -280,7 +295,8 @@
     "pretrain_full_file = PATH+\"siim_pretrain_results_full.csv\"\n",
     "ptrain_full = pd.read_csv(pretrain_full_file)\n",
     "\n",
-    "ptrain_full"
+    "display(ptrain_1)\n",
+    "display(ptrain_full)"
    ]
   },
   {
@@ -293,8 +309,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "id": "6fda2842",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is for 1 fold, out of 5\n",
+    "# This will be used to find OUR carbon footprint\n",
+    "train_1_file = PATH+\"siim_train_results_1epoch.csv\"\n",
+    "train_1 = pd.read_csv(train_1_file)\n",
+    "\n",
+    "#train_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "4abee22f",
    "metadata": {},
    "outputs": [
     {
@@ -397,26 +428,9 @@
        "6   n_cf11_rot1  0:52:31     0.170745   6.787123      0.063136"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# This is for 1 fold, out of 5\n",
-    "# This will be used to find OUR carbon footprint\n",
-    "train_1_file = PATH+\"siim_train_results_1epoch.csv\"\n",
-    "train_1 = pd.read_csv(train_1_file)\n",
-    "\n",
-    "train_1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "4abee22f",
-   "metadata": {},
-   "outputs": [
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -517,9 +531,8 @@
        "6   n_cf11_rot1   4:22:35     0.853726   33.062484      0.307558"
       ]
      },
-     "execution_count": 8,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -527,7 +540,8 @@
     "train_full_file = PATH+\"siim_train_results_full.csv\"\n",
     "train_full = pd.read_csv(train_full_file)\n",
     "\n",
-    "train_full"
+    "display(train_1)\n",
+    "display(train_full)"
    ]
   },
   {
@@ -540,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "de1c2a43",
    "metadata": {},
    "outputs": [],
@@ -579,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "d8cb3b5f",
    "metadata": {},
    "outputs": [
@@ -632,7 +646,7 @@
        "0  ptrain  1168.426943     10.869088"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "028e002d",
    "metadata": {},
    "outputs": [
@@ -706,20 +720,20 @@
        "0  ptrain  5258.916972     48.920157"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Carbon footprint of the full training, \n",
+    "# Carbon footprint of the full training\n",
     "team2_totals = calc_footprint(ptrain_full, train_full, 1, 1)\n",
     "team2_totals"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "id": "5a6ab1b0",
    "metadata": {},
    "outputs": [
@@ -727,14 +741,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Team 2's CO2 total usage (not including pipeline2): 5752.78g\n",
-      "Team 2's distance total (not including pipeline2): 53.51km\n"
+      "Team 2's CO2 total usage (pipeline1): 5752.78g\n",
+      "Team 2's distance total (pipeline1): 53.51km\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Team 2's CO2 total usage (not including pipeline2): {round(team2_totals['CO2eq(g)'].sum(),2)}g\")\n",
-    "print(f\"Team 2's distance total (not including pipeline2): {round(team2_totals['distance(km)'].sum(),2)}km\")"
+    "max_train_cost_CO2 = round(team2_totals['CO2eq(g)'].sum(),2)\n",
+    "print(f\"Team 2's CO2 total usage (pipeline1): {max_train_cost_CO2}g\")\n",
+    "print(f\"Team 2's distance total (pipeline1): {round(team2_totals['distance(km)'].sum(),2)}km\")"
    ]
   },
   {
@@ -758,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "id": "6c44a399",
    "metadata": {},
    "outputs": [],
@@ -798,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 29,
    "id": "5bc23cf8",
    "metadata": {},
    "outputs": [],
@@ -830,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 30,
    "id": "10bd5d9f",
    "metadata": {},
    "outputs": [
@@ -939,7 +954,7 @@
        "4  thyroid_frz_false           1.749               0.016"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 31,
    "id": "dbd7bb0d",
    "metadata": {},
    "outputs": [
@@ -981,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "id": "44d848f5",
    "metadata": {},
    "outputs": [
@@ -1005,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "id": "ed191d3b",
    "metadata": {},
    "outputs": [
@@ -1035,10 +1050,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 47,
    "id": "f274bcbc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.583"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Total entries\n",
     "total_entries = 32307\n",
@@ -1049,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 35,
    "id": "5c32a48b",
    "metadata": {},
    "outputs": [
@@ -1059,20 +1085,43 @@
        "50261.833"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Lower bound = lowest model training cost * total entries (excluding teams who submitted 2 or less times)\n",
-    "lower_bound = total_entries_more_than_2 * min_train_cost\n",
-    "lower_bound"
+    "lower_bound_CO2 = total_entries_more_than_2 * min_train_cost\n",
+    "lower_bound_CO2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
+   "id": "6b22f703",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "182656517.78"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Upper bound = lowest model training cost * total entries (excluding teams who submitted 2 or less times)\n",
+    "upper_bound_CO2 = total_entries_more_than_2 * max_train_cost_CO2\n",
+    "upper_bound_CO2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "cea08edb",
    "metadata": {},
    "outputs": [
@@ -1080,6 +1129,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The estimated carbon footprint of the whole competition is 17546422.26g CO2eq\n",
       "Which is equivalent to 275787.84lbs of CO2\n"
      ]
     }
@@ -1093,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "id": "a488510a",
    "metadata": {},
    "outputs": [
@@ -1111,17 +1161,247 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "1f4544c8",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "273d82b8",
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "9ebdf9fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dataset</th>\n",
+       "      <th>total_CO2eq(g)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>isic_frz_true</td>\n",
+       "      <td>7.601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>breast_frz_true</td>\n",
+       "      <td>5.054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>chest_frz_true</td>\n",
+       "      <td>13.117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>knee_frz_true</td>\n",
+       "      <td>4.784</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>thyroid_frz_true</td>\n",
+       "      <td>1.583</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>isic_frz_false</td>\n",
+       "      <td>120.219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>breast_frz_false</td>\n",
+       "      <td>12.572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>chest_frz_false</td>\n",
+       "      <td>36.428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>knee_frz_false</td>\n",
+       "      <td>18.384</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>thyroid_frz_false</td>\n",
+       "      <td>1.749</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             dataset  total_CO2eq(g)\n",
+       "0      isic_frz_true           7.601\n",
+       "1    breast_frz_true           5.054\n",
+       "2     chest_frz_true          13.117\n",
+       "3      knee_frz_true           4.784\n",
+       "4   thyroid_frz_true           1.583\n",
+       "0     isic_frz_false         120.219\n",
+       "1   breast_frz_false          12.572\n",
+       "2    chest_frz_false          36.428\n",
+       "3     knee_frz_false          18.384\n",
+       "4  thyroid_frz_false           1.749"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>training_file</th>\n",
+       "      <th>CO2eq(g)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cait_pretraining</td>\n",
+       "      <td>1126.210028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>f1_pretraining</td>\n",
+       "      <td>1024.948272</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>f3_pretraining</td>\n",
+       "      <td>1194.298670</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>l1_pretraining</td>\n",
+       "      <td>631.333879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>l1b_pretraining</td>\n",
+       "      <td>334.029285</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>l2_pretraining</td>\n",
+       "      <td>516.337360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>n_cf2_pretraining</td>\n",
+       "      <td>431.759478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>n_cf11</td>\n",
+       "      <td>42.493534</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>n_cf11_1</td>\n",
+       "      <td>168.435306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>n_cf11_9</td>\n",
+       "      <td>50.139455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>n_cf11_10</td>\n",
+       "      <td>34.338704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>n_cf11_6</td>\n",
+       "      <td>107.277989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>n_cf11_7</td>\n",
+       "      <td>58.111582</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>n_cf11_rot1</td>\n",
+       "      <td>33.062484</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       training_file     CO2eq(g)\n",
+       "0   cait_pretraining  1126.210028\n",
+       "1     f1_pretraining  1024.948272\n",
+       "2     f3_pretraining  1194.298670\n",
+       "3     l1_pretraining   631.333879\n",
+       "4    l1b_pretraining   334.029285\n",
+       "5     l2_pretraining   516.337360\n",
+       "6  n_cf2_pretraining   431.759478\n",
+       "0             n_cf11    42.493534\n",
+       "1           n_cf11_1   168.435306\n",
+       "2           n_cf11_9    50.139455\n",
+       "3          n_cf11_10    34.338704\n",
+       "4           n_cf11_6   107.277989\n",
+       "5           n_cf11_7    58.111582\n",
+       "6        n_cf11_rot1    33.062484"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "Amount of teams with submissions over 2: "
+    "display(revisit_transfer[[\"dataset\",\"total_CO2eq(g)\"]])\n",
+    "display(team2[[\"training_file\",\"CO2eq(g)\"]])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a910bcf1",
+   "id": "273574fe",
    "metadata": {},
    "outputs": [],
    "source": []
