removed duplicate code

--- a/carbonFootprintResults.ipynb
+++ b/carbonFootprintResults.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "24e41da9",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "6fda2842",
    "metadata": {},
    "outputs": [
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "de1c2a43",
    "metadata": {},
    "outputs": [],
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "d8cb3b5f",
    "metadata": {},
    "outputs": [
@@ -624,7 +624,7 @@
        "1   train    93.406810      0.868901"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "028e002d",
    "metadata": {},
    "outputs": [
@@ -699,7 +699,7 @@
        "1   train   493.859054      4.594039"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "5a6ab1b0",
    "metadata": {},
    "outputs": [
@@ -726,8 +726,8 @@
     }
    ],
    "source": [
-    "max_train_cost_CO2 = round(team2_totals['CO2eq(g)'].sum(), 2)\n",
-    "max_train_cost_dist = round(team2_totals['distance(km)'].sum(),2)\n",
+    "max_train_cost_CO2 = round(team2_siim_totals['CO2eq(g)'].sum(), 2)\n",
+    "max_train_cost_dist = round(team2_siim_totals['distance(km)'].sum(),2)\n",
     "\n",
     "print(f\"Team 2's CO2 total usage (pipeline1): {max_train_cost_CO2}g\")\n",
     "print(f\"Team 2's distance total (pipeline1): {max_train_cost_dist}km\")"
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac453b79",
+   "id": "37995816",
    "metadata": {},
    "source": [
     "# ============================================================"
@@ -754,85 +754,53 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "bda436f4",
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5e929fb8",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Base=ImageNet Freeze=False"
+    "# Load results file with Base=ImageNet and Freeze=False\n",
+    "rt_frz_false_file = PATH+\"rt_imagenet_frzfalse_results.csv\"\n",
+    "rt_frz_false = pd.read_csv(rt_frz_false_file)\n",
+    "\n",
+    "# Load results file with Base=ImageNet and Freeze=True\n",
+    "rt_frz_true_file = PATH+\"rt_imagenet_frztrue_results.csv\"\n",
+    "rt_frz_true = pd.read_csv(rt_frz_true_file)\n",
+    "\n",
+    "# Add string to dataset name\n",
+    "rt_frz_false[\"dataset\"] = rt_frz_false[\"dataset\"].astype(str) + \"_frz_false\"\n",
+    "rt_frz_true[\"dataset\"] = rt_frz_true[\"dataset\"].astype(str) + \"_frz_true\"\n",
+    "\n",
+    "# Combine datasets\n",
+    "revisit_transfer = pd.concat([rt_frz_false, rt_frz_true])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "6c44a399",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load results file\n",
-    "rt_frz_false_file = PATH+\"rt_imagenet_frzfalse_results.csv\"\n",
-    "rt_frz_false = pd.read_csv(rt_frz_false_file)\n",
-    "\n",
-    "# Add string to dataset name\n",
-    "rt_frz_false[\"dataset\"] = rt_frz_false[\"dataset\"].astype(str) + \"_frz_false\"\n",
-    "\n",
     "# Calculate total epochs ran\n",
-    "rt_frz_false[\"total_epochs\"] = rt_frz_false[\"epochs\"] + rt_frz_false[\"class_epochs\"]\n",
+    "revisit_transfer[\"total_epochs\"] = revisit_transfer[\"epochs\"] + revisit_transfer[\"class_epochs\"]\n",
     "\n",
     "# Get CO2eq and distance per single epoch\n",
-    "rt_frz_false[\"CO2eq(g)/e\"] = rt_frz_false[\"CO2eq(g)\"] / rt_frz_false[\"epochs\"]\n",
-    "rt_frz_false[\"distance(km)/e\"] = rt_frz_false[\"distance(km)\"] / rt_frz_false[\"epochs\"]\n",
+    "revisit_transfer[\"CO2eq(g)/e\"] = revisit_transfer[\"CO2eq(g)\"] / revisit_transfer[\"epochs\"]\n",
+    "revisit_transfer[\"distance(km)/e\"] = revisit_transfer[\"distance(km)\"] / revisit_transfer[\"epochs\"]\n",
     "\n",
     "# Get Total CO2eq and distance per model\n",
-    "rt_frz_false[\"total_CO2eq(g)\"] = rt_frz_false[\"CO2eq(g)/e\"] * rt_frz_false[\"total_epochs\"]\n",
-    "rt_frz_false[\"total_distance(km)\"] = rt_frz_false[\"distance(km)/e\"] * rt_frz_false[\"total_epochs\"]\n",
+    "revisit_transfer[\"total_CO2eq(g)\"] = revisit_transfer[\"CO2eq(g)/e\"] * revisit_transfer[\"total_epochs\"]\n",
+    "revisit_transfer[\"total_distance(km)\"] = revisit_transfer[\"distance(km)/e\"] * revisit_transfer[\"total_epochs\"]\n",
     "\n",
     "# Round values\n",
-    "rt_frz_false[[\"total_CO2eq(g)\",\"total_distance(km)\"]] = rt_frz_false[[\"total_CO2eq(g)\",\"total_distance(km)\"]].round(3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "10acfabd",
-   "metadata": {},
-   "source": [
-    "## Base=ImageNet Freeze=True"
+    "revisit_transfer[[\"total_CO2eq(g)\",\"total_distance(km)\"]] = revisit_transfer[[\"total_CO2eq(g)\",\"total_distance(km)\"]].round(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "5bc23cf8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load results file\n",
-    "rt_frz_true_file = PATH+\"rt_imagenet_frztrue_results.csv\"\n",
-    "rt_frz_true = pd.read_csv(rt_frz_true_file)\n",
-    "\n",
-    "# calculate total epochs\n",
-    "rt_frz_true[\"total_epochs\"] = rt_frz_true[\"epochs\"] + rt_frz_true[\"class_epochs\"]\n",
-    "\n",
-    "# Add string to dataset name\n",
-    "rt_frz_true[\"dataset\"] = rt_frz_true[\"dataset\"].astype(str) + \"_frz_true\"\n",
-    "\n",
-    "# Calculate total epochs ran\n",
-    "rt_frz_true[\"total_epochs\"] = rt_frz_true[\"epochs\"] + rt_frz_true[\"class_epochs\"]\n",
-    "\n",
-    "# Get CO2eq and distance per single epoch\n",
-    "rt_frz_true[\"CO2eq(g)/e\"] = rt_frz_true[\"CO2eq(g)\"] / rt_frz_true[\"epochs\"]\n",
-    "rt_frz_true[\"distance(km)/e\"] = rt_frz_true[\"distance(km)\"] / rt_frz_true[\"epochs\"]\n",
-    "\n",
-    "# Get Total CO2eq and distance per model\n",
-    "rt_frz_true[\"total_CO2eq(g)\"] = rt_frz_true[\"CO2eq(g)/e\"] * rt_frz_true[\"total_epochs\"]\n",
-    "rt_frz_true[\"total_distance(km)\"] = rt_frz_true[\"distance(km)/e\"] * rt_frz_true[\"total_epochs\"]\n",
-    "\n",
-    "# Round values\n",
-    "rt_frz_true[[\"total_CO2eq(g)\",\"total_distance(km)\"]] = rt_frz_true[[\"total_CO2eq(g)\",\"total_distance(km)\"]].round(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "10bd5d9f",
    "metadata": {},
    "outputs": [
@@ -865,36 +833,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>isic_frz_true</td>\n",
-       "      <td>7.601</td>\n",
-       "      <td>0.071</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>breast_frz_true</td>\n",
-       "      <td>5.054</td>\n",
-       "      <td>0.047</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>chest_frz_true</td>\n",
-       "      <td>13.117</td>\n",
-       "      <td>0.122</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>knee_frz_true</td>\n",
-       "      <td>4.784</td>\n",
-       "      <td>0.045</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>thyroid_frz_true</td>\n",
-       "      <td>1.583</td>\n",
-       "      <td>0.015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
        "      <td>isic_frz_false</td>\n",
        "      <td>120.219</td>\n",
        "      <td>1.118</td>\n",
@@ -923,40 +861,67 @@
        "      <td>1.749</td>\n",
        "      <td>0.016</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>isic_frz_true</td>\n",
+       "      <td>7.601</td>\n",
+       "      <td>0.071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>breast_frz_true</td>\n",
+       "      <td>5.054</td>\n",
+       "      <td>0.047</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>chest_frz_true</td>\n",
+       "      <td>13.117</td>\n",
+       "      <td>0.122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>knee_frz_true</td>\n",
+       "      <td>4.784</td>\n",
+       "      <td>0.045</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>thyroid_frz_true</td>\n",
+       "      <td>1.583</td>\n",
+       "      <td>0.015</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "             dataset  total_CO2eq(g)  total_distance(km)\n",
-       "0      isic_frz_true           7.601               0.071\n",
-       "1    breast_frz_true           5.054               0.047\n",
-       "2     chest_frz_true          13.117               0.122\n",
-       "3      knee_frz_true           4.784               0.045\n",
-       "4   thyroid_frz_true           1.583               0.015\n",
        "0     isic_frz_false         120.219               1.118\n",
        "1   breast_frz_false          12.572               0.117\n",
        "2    chest_frz_false          36.428               0.339\n",
        "3     knee_frz_false          18.384               0.171\n",
-       "4  thyroid_frz_false           1.749               0.016"
+       "4  thyroid_frz_false           1.749               0.016\n",
+       "0      isic_frz_true           7.601               0.071\n",
+       "1    breast_frz_true           5.054               0.047\n",
+       "2     chest_frz_true          13.117               0.122\n",
+       "3      knee_frz_true           4.784               0.045\n",
+       "4   thyroid_frz_true           1.583               0.015"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Concat both revisiting transfer datasets (freeze=true and freeze=false)\n",
-    "revisit_transfer = pd.concat([rt_frz_true, rt_frz_false])\n",
-    "\n",
     "# Show just the total columns\n",
     "revisit_transfer[[\"dataset\",\"total_CO2eq(g)\",\"total_distance(km)\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "id": "dbd7bb0d",
    "metadata": {},
    "outputs": [
@@ -970,7 +935,7 @@
    ],
    "source": [
     "min_train_cost_CO2 = revisit_transfer['total_CO2eq(g)'].min()\n",
-    "print(f\"The minimum carbon footprint of training a single model is {min_train_cost}g CO2 emissions\")"
+    "print(f\"The minimum carbon footprint of training a single model is {min_train_cost_CO2}g CO2 emissions\")"
    ]
   },
   {
@@ -985,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "id": "f274bcbc",
    "metadata": {},
    "outputs": [],
@@ -999,7 +964,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f3e7c91",
+   "id": "8f532a3f",
    "metadata": {},
    "source": [
     "## Lower bound"
@@ -1007,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "id": "5c32a48b",
    "metadata": {},
    "outputs": [
@@ -1017,7 +982,7 @@
        "50261.833"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,7 +995,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64432200",
+   "id": "03ef4450",
    "metadata": {},
    "source": [
     "## Upper bound"
@@ -1038,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "id": "6b22f703",
    "metadata": {},
    "outputs": [
@@ -1048,7 +1013,7 @@
        "182656517.78"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,15 +1026,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e2e8c55",
+   "id": "f81a321b",
    "metadata": {},
    "source": [
     "# =========================================================="
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "99979cf9",
+   "metadata": {},
+   "source": [
+    "# Display dataframes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "id": "9ebdf9fe",
    "metadata": {},
    "outputs": [
@@ -1101,31 +1074,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>isic_frz_true</td>\n",
-       "      <td>7.601</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>breast_frz_true</td>\n",
-       "      <td>5.054</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>chest_frz_true</td>\n",
-       "      <td>13.117</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>knee_frz_true</td>\n",
-       "      <td>4.784</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>thyroid_frz_true</td>\n",
-       "      <td>1.583</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
        "      <td>isic_frz_false</td>\n",
        "      <td>120.219</td>\n",
        "    </tr>\n",
@@ -1149,22 +1097,47 @@
        "      <td>thyroid_frz_false</td>\n",
        "      <td>1.749</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>isic_frz_true</td>\n",
+       "      <td>7.601</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>breast_frz_true</td>\n",
+       "      <td>5.054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>chest_frz_true</td>\n",
+       "      <td>13.117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>knee_frz_true</td>\n",
+       "      <td>4.784</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>thyroid_frz_true</td>\n",
+       "      <td>1.583</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "             dataset  total_CO2eq(g)\n",
-       "0      isic_frz_true           7.601\n",
-       "1    breast_frz_true           5.054\n",
-       "2     chest_frz_true          13.117\n",
-       "3      knee_frz_true           4.784\n",
-       "4   thyroid_frz_true           1.583\n",
        "0     isic_frz_false         120.219\n",
        "1   breast_frz_false          12.572\n",
        "2    chest_frz_false          36.428\n",
        "3     knee_frz_false          18.384\n",
-       "4  thyroid_frz_false           1.749"
+       "4  thyroid_frz_false           1.749\n",
+       "0      isic_frz_true           7.601\n",
+       "1    breast_frz_true           5.054\n",
+       "2     chest_frz_true          13.117\n",
+       "3      knee_frz_true           4.784\n",
+       "4   thyroid_frz_true           1.583"
       ]
      },
      "metadata": {},
@@ -1309,8 +1282,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "db6920a1",
+   "execution_count": 19,
+   "id": "8a7ab535",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1320,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "id": "44d848f5",
    "metadata": {},
    "outputs": [
@@ -1336,7 +1309,7 @@
    ],
    "source": [
     "# CO2 cost\n",
-    "CO2_cost_per_model = (rt_frz_true[\"total_CO2eq(g)\"].sum() + rt_frz_false[\"total_CO2eq(g)\"].sum() + team2_totals[\"CO2eq(g)\"].sum()) / total_models_trained\n",
+    "CO2_cost_per_model = (revisit_transfer[\"total_CO2eq(g)\"].sum() + team2_siim_totals[\"CO2eq(g)\"].sum()) / total_models_trained\n",
     "CO2_whole_comp_cost = total_entries * CO2_cost_per_model\n",
     "\n",
     "print(f\"The average cost of training a single model is {round(CO2_cost_per_model,2)}g CO2eq\")\n",
@@ -1346,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "id": "ed191d3b",
    "metadata": {},
    "outputs": [
@@ -1361,7 +1334,7 @@
    ],
    "source": [
     "# distance cost\n",
-    "dist_cost_per_model = (rt_frz_true[\"total_distance(km)\"].sum() + rt_frz_false[\"total_distance(km)\"].sum() + team2_totals[\"distance(km)\"].sum()) / total_models_trained\n",
+    "dist_cost_per_model = (revisit_transfer[\"total_distance(km)\"].sum() + team2_siim_totals[\"distance(km)\"].sum()) / total_models_trained\n",
     "dist_whole_comp_cost = total_entries * dist_cost_per_model\n",
     "\n",
     "print(f\"The average distance cost of training a single model is {round(dist_cost_per_model,2)}km\")\n",
