further notebook cleaning

--- a/carbonFootprintResults.ipynb
+++ b/carbonFootprintResults.ipynb
@@ -641,7 +641,7 @@
    "id": "f0ae9099",
    "metadata": {},
    "source": [
-    "# Calculating Team 2's Carbon Footprint"
+    "## Maximum Training Cost: Based on Team 2's Pipeline1"
    ]
   },
   {
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37995816",
+   "id": "aa2bf785",
    "metadata": {},
    "source": [
     "# ============================================================"
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5e929fb8",
+   "id": "317a2762",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "10bd5d9f",
    "metadata": {},
    "outputs": [
@@ -909,7 +909,7 @@
        "4   thyroid_frz_true           1.583               0.015"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,6 +917,14 @@
    "source": [
     "# Show just the total columns\n",
     "revisit_transfer[[\"dataset\",\"total_CO2eq(g)\",\"total_distance(km)\"]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d8ad468",
+   "metadata": {},
+   "source": [
+    "## Minimum training cost"
    ]
   },
   {
@@ -935,7 +943,16 @@
    ],
    "source": [
     "min_train_cost_CO2 = revisit_transfer['total_CO2eq(g)'].min()\n",
+    "\n",
     "print(f\"The minimum carbon footprint of training a single model is {min_train_cost_CO2}g CO2 emissions\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c58174b",
+   "metadata": {},
+   "source": [
+    "# =========================================================="
    ]
   },
   {
@@ -958,13 +975,13 @@
     "# Total entries\n",
     "total_entries = 32307\n",
     "\n",
-    "# Total teams with more than 2 submissions\n",
+    "# Total submissions, based on teams with more than 2 submissions\n",
     "total_entries_more_than_2 = 31751"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8f532a3f",
+   "id": "25ff441e",
    "metadata": {},
    "source": [
     "## Lower bound"
@@ -995,7 +1012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03ef4450",
+   "id": "7747a2f2",
    "metadata": {},
    "source": [
     "## Upper bound"
@@ -1026,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f81a321b",
+   "id": "5e37269d",
    "metadata": {},
    "source": [
     "# =========================================================="
@@ -1034,7 +1051,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99979cf9",
+   "id": "b84795bb",
    "metadata": {},
    "source": [
     "# Display dataframes"
@@ -1275,6 +1292,7 @@
    "id": "f1fc75ee",
    "metadata": {},
    "source": [
+    "# ==========================================================\n",
     "# Average Cost to Train a Single Model\n",
     "\n",
     "We are moving away from this metric, as the average does not make sense. There are reasons it could be an overestimation (some entries are possibly very simple, with training a single model) as well as an underestimation (we did not measure all of Team 2's ensemble, and many of the winners have similar ensembles). Therefore we are transitioning to a lower an upper bound estimation. See below."
@@ -1283,7 +1301,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "8a7ab535",
+   "id": "740c5ccb",
    "metadata": {},
    "outputs": [],
    "source": [
