--- a/carbonFootprintResults.ipynb
+++ b/carbonFootprintResults.ipynb
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa2bf785",
+   "id": "bb877ec3",
    "metadata": {},
    "source": [
     "# ============================================================"
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "317a2762",
+   "id": "abce1b1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d8ad468",
+   "id": "a2e263a2",
    "metadata": {},
    "source": [
     "## Minimum training cost"
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "dbd7bb0d",
    "metadata": {},
    "outputs": [
@@ -943,13 +943,14 @@
    ],
    "source": [
     "min_train_cost_CO2 = revisit_transfer['total_CO2eq(g)'].min()\n",
+    "min_train_cost_dist = revisit_transfer['total_distance(km)'].min()\n",
     "\n",
     "print(f\"The minimum carbon footprint of training a single model is {min_train_cost_CO2}g CO2 emissions\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9c58174b",
+   "id": "afd0b912",
    "metadata": {},
    "source": [
     "# =========================================================="
@@ -981,7 +982,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25ff441e",
+   "id": "1e618cf0",
    "metadata": {},
    "source": [
     "## Lower bound"
@@ -989,30 +990,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "5c32a48b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "50261.833"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CO2 lower bound: 50261.833g\n",
+      "Distance lower bound: 476.265km\n"
+     ]
     }
    ],
    "source": [
     "# Lower bound = lowest model training cost * total entries (excluding teams who submitted 2 or less times)\n",
     "lower_bound_CO2 = min_train_cost_CO2 * total_entries_more_than_2\n",
-    "lower_bound_CO2"
+    "lower_bound_dist = min_train_cost_dist * total_entries_more_than_2\n",
+    "print(f\"CO2 lower bound: {lower_bound_CO2}g\") \n",
+    "print(f\"Distance lower bound: {lower_bound_dist}km\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7747a2f2",
+   "id": "f19a686d",
    "metadata": {},
    "source": [
     "## Upper bound"
@@ -1020,30 +1021,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "id": "6b22f703",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "182656517.78"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CO2 lower bound: 182656517.78g\n",
+      "Distance lower bound: 1698996.01km\n"
+     ]
     }
    ],
    "source": [
     "# Upper bound = highest model training cost * total entries (excluding teams who submitted 2 or less times)\n",
     "upper_bound_CO2 = max_train_cost_CO2 * total_entries_more_than_2\n",
-    "upper_bound_CO2"
+    "upper_bound_dist = max_train_cost_dist * total_entries_more_than_2\n",
+    "\n",
+    "print(f\"CO2 lower bound: {upper_bound_CO2}g\") \n",
+    "print(f\"Distance lower bound: {upper_bound_dist}km\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5e37269d",
+   "id": "879f3f37",
    "metadata": {},
    "source": [
     "# =========================================================="
@@ -1051,7 +1053,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b84795bb",
+   "id": "23f0dfca",
    "metadata": {},
    "source": [
     "# Display dataframes"
@@ -1301,7 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "740c5ccb",
+   "id": "8bf90df3",
    "metadata": {},
    "outputs": [],
    "source": [
